# nonogram

./: .gitignore  README.md  justfile  mise.toml  pyproject.toml  random_nonogram_demo.tape  test.txt
demos/: benchmark_rich_demo.tape  continue_demo.tape  random_nonogram_demo.tape  style.tape
nonogram/: benchmark.py  cli.py  cli_utils.py  data.py  game.py  generate.py  get_puzzle.py  sampling.py  solution_db.py  solve_random_nonograms.py  solver.py  temp.py  xmlformat.py
puzzles/: 1.xml  16.xml  1611.xml  21.xml  23.xml  27.xml  436.xml  529.xml  6.xml  65.xml  6574.xml  803.xml  8098.xml
scripts/: output.sh  stats.sh
