[tool.poetry]
name = "nonogram"
version = "0.1.0"
description = "Solves nonograms by constraint satisfaction"
authors = ["Saul Reynolds-Haertle <saul@saulrh.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
cpmpy = "^0.9.19"
click = "^8.1.7"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
requests = "^2.31.0"
setuptools = "^80.9.0"
more-itertools = "^10.7.0"

[tool.poetry.scripts]
solve_nonogram = "nonogram.cli:main"
get_nonogram = "nonogram.get_puzzle:main"
benchmark_nonogram = "nonogram.cli:benchmark"
random_nonogram = "nonogram.cli:random_nonogram"
continue_random_nonogram = "nonogram.cli:continue_random_nonogram"


[tool.poetry.group.dev.dependencies]
python-lsp-server = "^1.12.2"
pylsp-rope = "^0.1.17"
pytype = "^2024.10.11"
mypy = "^1.16.0"
types-requests = "^2.32.0.20250602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
