[project]
name = "nonogram"
version = "0.1.0"
description = "Solves nonograms by constraint satisfaction"
authors = [{ name = "Saul Reynolds-Haertle", email = "saul@saulrh.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "click>=8.2.1",
  "cmasher>=1.9.2",
  "cpmpy>=0.9.25",
  "lxml>=5.4.0",
  "matplotlib>=3.10.3",
  "more-itertools>=10.7.0",
  "natsort>=8.4.0",
  "pysocks>=1.7.1",
  "requests>=2.32.3",
  "rich>=14.0.0",
  "rich-heatmap>=0.1.2",
  "setuptools==66.1.1",
]


[project.scripts]
solve_nonogram = "nonogram.cli:solve_nonogram"
get_nonogram = "nonogram.get_puzzle:main"
benchmark_nonogram = "nonogram.benchmark:main"
solve_random_nonograms = "nonogram.solve_random_nonograms:solve_random_nonograms"
continue_random_nonograms = "nonogram.solve_random_nonograms:continue_random_nonograms"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pylsp-rope>=0.1.17",
  "python-lsp-server>=1.12.2",
  "pytype>=2024.10.11",
  "types-requests>=2.32.0.20250602",
]

[tool.uv.sources]
rich-heatmap = { path = "../rich_heatmap" }

[[tool.mypy.overrides]]
module = ["cpmpy.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["cmasher"]
ignore_missing_imports = true
